--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     django1_9: Django>=1.9,<1.10
     django1_10: Django>=1.10,<1.11
     django1_11: Django>=1.11,<1.12
+    django2_0: Django>=2.0,<2.1
 
 [testenv:flake8]
 basepython = python3
